--- a/views/admin/order-management.ejs
+++ b/views/admin/order-management.ejs
@@ -38,7 +38,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <% for(let i=0; i < orders.length; i++) { %>
+                            <% for(let i=orders.length-1; i >= 0; i--) { %>
                                 <tr>
                                     <td>
                                         <a href="/admin/order?id=<%= orders[i]._id %>"><%= orders[i]._id %></a>
