--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -66,7 +66,7 @@
               <li class="nav-item">
                 <a href="/cart" class="nav-link cart-link">
                   <i class="bi bi-cart-fill"></i>
-                  <!-- <span class="cart-badge"></span> -->
+                  <span class="cart-badge"><%= cartCount %></span>
                 </a>
               </li>
               <% } %>
